tests/negative/test_mac_no_ret.orb
mac foo () {};

fnc main () () {
    foo;
};